--- a/R/monthly_trade_report.Rmd
+++ b/R/monthly_trade_report.Rmd
@@ -37,6 +37,15 @@ library(glue)
 
 source(here("R", "money.R"))
 
+# use update_data.R to add new monthly data
+# FFD totals
+ffd <- read_rds(here("data", "tidy", "ffd.rds"))
+# FFD by country
+ffdcountry <- read_rds(here("data", "tidy", "ffdcountry.rds"))
+# non response
+nonresponse <- read_rds(here("data", "tidy", "nonresponse.rds"))
+# Get div codesc and descriptions
+divcodes <- read.csv(here("data", "tidy", "divcodes.csv"))
 
 
 
@@ -50,167 +59,6 @@ theme <-   theme_minimal() +
 
 ```
 
-```{r read_raw_data}
-
-# Read in datasets
-
-# FFD data
-# convert date text to date
-# tidy flow descriptions
-# convert values from £000s to actual
-
-# ffd <- read.csv(here("data", "raw", params$ffddata),
-#                 col.names = c("year", "month", "flow", "divcode", "divdesc", "product", "value", "tonnes")) %>% 
-#   mutate(date = as.Date(paste(year, month, "1", sep = "-"), format = "%Y-%m-%d"),
-#          flow = case_when(flow == "Total Exports" ~ "Exports",
-#                           flow == "Total Imports" ~ "Imports"),
-#          value = value * 1000) 
-
-ffdpre2020cols <- cols(
-  year = col_integer(),
-  month = col_integer(),
-  flow = col_character(),
-  divcode = col_integer(),
-  divdesc = col_character(),
-  product = col_character(),
-  value = col_double(),
-  tonnes = col_double(),
-  date = col_date(format = "")
-)
-
-
-ffdlatestcols <- cols(
-  year = col_integer(),
-  month = col_integer(),
-  flow = col_character(),
-  divcode = col_integer(),
-  divdesc = col_character(),
-  product = col_character(),
-  value = col_double(),
-  tonnes = col_double()
-)
-
-
-ffdpre2020 <- read_csv(here("data", "tidy", "ffd2009-2019.csv"), col_types = ffdpre2020cols) 
-
-
-ffdlatest <- read_csv(here("data", "raw", params$ffddata),
-                col_types = ffdlatestcols, 
-                col_names = c("year", "month", "flow", "divcode", "divdesc", "product", "value", "tonnes"),
-                skip = 1) %>% 
-  mutate(date = as.Date(paste(year, month, "1", sep = "-"), format = "%Y-%m-%d"),
-         flow = case_when(flow == "Total Exports" ~ "Exports",
-                          flow == "Total Imports" ~ "Imports"),
-         value = value * 1000) 
-
-
-
-ffd <- ffdpre2020 %>% 
-       bind_rows(ffdlatest)
-
-
-# ffdcountry <- read.csv(here("data", "raw", params$ffdcountrydata),
-#                        col.names = c("year", "month", "flow", "eunoneu", "country", "divcode", "divdesc", "value", "tonnes")) %>% 
-#     mutate(date = as.Date(paste(year, month, "1", sep = "-"), format = "%Y-%m-%d"), 
-#            flow = case_when(flow == "Total Exports" ~ "Exports",
-#                           flow == "Total Imports" ~ "Imports"),
-#            value = value * 1000)
-
-
-ffdcountrypre2020cols <- cols(
-  year = col_integer(),
-  month = col_integer(),
-  flow = col_character(),
-  eunoneu = col_character(),
-  country = col_character(),
-  divcode = col_integer(),
-  divdesc = col_character(),
-  value = col_double(),
-  tonnes = col_double(),
-  date = col_date(format = "")
-)
-
-
-ffdcountrylatestcols <- cols(
-  year = col_integer(),
-  month = col_integer(),
-  flow = col_character(),
-  eunoneu = col_character(),
-  country = col_character(),
-  divcode = col_integer(),
-  divdesc = col_character(),
-  value = col_double(),
-  tonnes = col_double()
-)
-
-ffdcountrypre2020 <- read_csv(here("data", "tidy", "ffdcountry2015-2019.csv"),
-         col_types = ffdcountrypre2020cols)
-
-
-
-ffdcountrylatest <- read_csv(here("data", "raw", params$ffdcountrydata),
-                       col_names = c("year", "month", "flow", "eunoneu", "country", "divcode", "divdesc", "value", "tonnes"),
-                       col_types = ffdcountrylatestcols,
-                       skip = 1) %>% 
-  mutate(date = as.Date(paste(year, month, "1", sep = "-"), format = "%Y-%m-%d"), 
-         flow = case_when(flow == "Total Exports" ~ "Exports",
-                          flow == "Total Imports" ~ "Imports"),
-         value = value * 1000)
-
-
-ffdcountry <- ffdcountrypre2020 %>% 
-              bind_rows(ffdcountrylatest)
-
-
-# Non response data
-# https://www.uktradeinfo.com/trade-data/ots-custom-table/?id=cdee0450-14b3-4e26-bed5-16e2e23b105a
-# 
-# add EU flag
-# tidy divcodes to numeric and filter out div 0 (could do this and get new url)
-
-nonresponse <- read_csv(here("data", "raw", params$nrdata),
-                        col_names = c("sitc1",
-                                      "sitc2",
-                                      "sitc3",
-                                      "sitc4",
-                                      "sitc5",
-                                      "flow",
-                                      "year",
-                                      "month",
-                                      "include",
-                                      "value_sterling"),
-                        skip = 1) %>% 
-  select(!(sitc3:sitc5)) %>% 
-  mutate(date = ymd(paste(year, month, "1", sep = "-")),
-         flow = case_when(flow == "EU - Exports" ~ "Exports",
-                          flow == "EU - Imports" ~ "Imports"),
-         eunoneu = "EU",
-         divcode = case_when(str_starts(sitc2, "00") ~ 0,
-                             str_starts(sitc2, "01") ~ 1,
-                             str_starts(sitc2, "02") ~ 2,
-                             str_starts(sitc2, "03") ~ 3,
-                             str_starts(sitc2, "04") ~ 4,
-                             str_starts(sitc2, "05") ~ 5,
-                             str_starts(sitc2, "06") ~ 6,
-                             str_starts(sitc2, "07") ~ 7,
-                             str_starts(sitc2, "08") ~ 8,
-                             str_starts(sitc2, "09") ~ 9,
-                             str_starts(sitc2, "11") ~ 11,
-                             str_starts(sitc2, "22") ~ 22,
-                             str_starts(sitc2, "41") ~ 41,
-                             str_starts(sitc2, "42") ~ 42,
-                             str_starts(sitc2, "43") ~ 43),
-         valuenr = value_sterling) %>% 
-         select(date, eunoneu, flow, divcode, valuenr) %>% 
-         filter(divcode != 0)
-
-
-# Get div codesc and descriptions
-
-divcodes <- read.csv(here("data", "tidy", "divcodes.csv"))
-
-
-```
 
 ```{r summary_value_datasets}
 
